<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:minHeight="50dp"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/fragment_title_galley" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/lblTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/fragment_title_photo" />

        </FrameLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_close_white_24dp"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgNext"
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_arrow_forward_white_24dp"/>

    </FrameLayout>

</android.support.v7.widget.Toolbar>