<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6">

        <FrameLayout
            android:id="@+id/fmlShowCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <SurfaceView
                android:id="@+id/cameraPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-50dp"
                android:layout_marginBottom="-50dp"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/lnlNotPermission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/md_grey_500"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/camera_title"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/md_grey_500"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/camera_description"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnActivatePermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_blue_500"
                android:padding="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="Activar"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_white_24dp"
            android:text="@string/app_name" />
    </LinearLayout>

</LinearLayout>